[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/player/assets/light-player.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/player/assets/footstep.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/player/assets/jump.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 14 )

[sub_resource type="AudioStreamRandomPitch" id=2]
audio_stream = ExtResource( 3 )
random_pitch = 1.05

[sub_resource type="AudioStreamRandomPitch" id=3]
audio_stream = ExtResource( 4 )

[node name="Player" type="KinematicBody2D"]
z_index = 100
collision_layer = 4
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="AudioFootsteps" type="AudioStreamPlayer" parent="."]
stream = SubResource( 2 )
volume_db = -11.362

[node name="AudioJump" type="AudioStreamPlayer" parent="."]
stream = SubResource( 3 )

[node name="KeyTween" type="Tween" parent="."]
